feat: update nullability annotations and bump version to 1.0.49